--- a/build.gradle
+++ b/build.gradle
@@ -16,20 +16,12 @@ repositories {
 }
 
 dependencies {
-    testImplementation 'org.junit.jupiter:junit-jupiter:5.6.1'
-    // testImplementation 'com.codeborne:selenide:6.13.0'
-
-
-    testImplementation group: 'com.codeborne', name: 'selenide', version: '6.13.0'
-
-
-    //https://mvnrepository.com/artifact/io.github.bonigarcia/webdrivermanager
-    testImplementation 'io.github.bonigarcia:webdrivermanager:5.3.2'
-
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.2'
+    testImplementation 'org.junit.jupiter:junit-jupiter-engine:5.8.2'
+    testImplementation 'com.codeborne:selenide:6.6.3'
 }
 
 test {
     useJUnitPlatform()
-    // в тестах, вызывая `gradlew test -Dselenide.headless=true` будем передавать этот параметр в JVM (где его подтянет Selenide)
-    systemProperty 'selenium.headless', System.getProperty('selenium.headless')
+    systemProperty ('selenide.headless', System.getProperty('selenide.headless'))
 }
